Bug 131118 - FILEOPEN: VML: Shape no longer fits to text
Summary: FILEOPEN: VML: Shape no longer fits to text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0 target:6.4.3
Keywords: bibisected, bisected, regression
: 105693 123319 123322 123327 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-04 10:50 UTC by Xisco Faulí
Modified: 2020-09-03 09:55 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.0 master (9.53 KB, image/png)
2020-03-04 10:50 UTC, Xisco Faulí
Details
How it looks in LibreOffice 6.3 (62.64 KB, image/png)
2020-03-04 10:52 UTC, Xisco Faulí
Details
sample file (39.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-03-10 09:46 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-03-04 10:50:03 UTC
Created attachment 158376 [details]
Comparison MSO 2010 and LibreOffice 7.0 master

Steps to reproduce:
1. Open attached document

-> The shape overlaps the text. See comparison screenshot

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: c57d6d39c80844c9d4c6bfed85cc151e52a67b34
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-03-04 10:52:27 UTC
Created attachment 158377 [details]
How it looks in LibreOffice 6.3
Comment 2 Xisco Faulí 2020-03-04 10:55:05 UTC
Although it wasn't the same in previous versions compared to MSO Word, it got worse in

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b92293b3943423324064a8513c2e114d18817179

author	Miklos Vajna <vmiklos@collabora.com>	2020-01-20 21:21:17 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2020-01-21 08:41:42 +0100
commit b92293b3943423324064a8513c2e114d18817179 (patch)
tree 21132cbf0d10e2da7ecf1c02075a6502dcc82cca
parent 7e6f8085dcafa811a72ad47dbaeca9090d9f22e7 (diff)
tdf#103983 VML import: handle <v:textbox style="mso-fit-shape-to-text:t">

Bisected with: bibisect-linux64-6.5

Adding Cc: to Miklos Vajna
Comment 3 Miklos Vajna 2020-03-10 09:42:13 UTC
(In reply to Xisco Faulí from comment #0)
> Steps to reproduce:
> 1. Open attached document

Did you forget to actually attach the bugdoc? :-) I only see 2 screenshots.
Comment 4 Xisco Faulí 2020-03-10 09:46:32 UTC
Created attachment 158541 [details]
sample file

lol, I forgot to attach it
Comment 5 Commit Notification 2020-03-17 08:00:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ee7ee1c4a515479bc174543af4dbc400035c0ba

tdf#131118 VML import: fix size of non-autosize shapes containing text

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-03-18 14:32:14 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 086bfde59232076644995ae862cd43865419ad98
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!
Comment 7 Commit Notification 2020-03-18 14:33:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/29ccc5f041562305c559d0e84ed90af9ccf302f7

tdf#131118 VML import: fix size of non-autosize shapes containing text

It will be available in 6.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2020-08-26 13:09:21 UTC
*** Bug 123327 has been marked as a duplicate of this bug. ***
Comment 9 NISZ LibreOffice Team 2020-08-26 13:18:47 UTC
*** Bug 123322 has been marked as a duplicate of this bug. ***
Comment 10 Timur 2020-09-02 11:36:34 UTC
*** Bug 105693 has been marked as a duplicate of this bug. ***
Comment 11 NISZ LibreOffice Team 2020-09-03 09:55:44 UTC
*** Bug 123319 has been marked as a duplicate of this bug. ***