tdf#131118 VML import: fix size of non-autosize shapes containing text

Regression from commit b92293b3943423324064a8513c2e114d18817179
(tdf#103983 VML import: handle <v:textbox
style="mso-fit-shape-to-text:t">, 2020-01-20), the problem was that in
case we disable autosize too late, then the size will be already set
during adding text to the shape.

Do it before adding text, this way adding text won't change the shape
size, so it'll be correct at the end of the import.

Change-Id: I9410fc695c3edfa5089d845864bf237e71c533c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90592
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>